k8s/homer/service-authentik-outpost.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: homer
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
